# stencil-optimalizations

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile.sh  configure.sh  configure_debug.sh  format.sh  gol-run-with-defaults.sh  out  run.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/_shared/: bitwise_gol_operations.hpp  bitwise_gol_operations_tests.hpp  gol_bit_grid.hpp
src/algorithms/an5d/: an5d-cpu-alg.cpp  an5d-cpu-alg.hpp  an5d_cuda_timer.cpp  an5d_cuda_timer.hpp  cpu_GOL_OP.hpp  cpu_gol.hpp  cpu_gol_32_64.cpp  cuda_GOL_OP.hpp  cuda_gol_32_64_an5d.hpp  gol_ops_for_an5d.hpp  raw_gol.hpp  raw_gol_32.cpp
src/algorithms/cpu-bitwise/: gol_cpu_bitwise.hpp
src/algorithms/cpu-bitwise-cols/: gol_cpu_bitwise_cols.hpp
src/algorithms/cpu-bitwise-cols-macro/: gol_cpu_bitwise_cols_macro.hpp  macro_gen.py
src/algorithms/cpu-bitwise-cols-naive/: cpu_bitwise_cols_naive.hpp
src/algorithms/cpu-bitwise-general/: gol_cpu_bitwise_general.hpp
src/algorithms/cpu-bitwise-general-naive/: gol_cpu_bitwise_general_naive.hpp
src/algorithms/cpu-bitwise-tiles/: gol_cpu_bitwise.hpp  gol_cpu_bitwise_tiles.hpp
src/algorithms/cpu-naive/: gol_cpu_naive.hpp
src/algorithms/cuda-memcpy/: cuda_memcpy_bench.cu  cuda_memcpy_bench.hpp
src/algorithms/cuda-naive-bitwise-no-macro/: cuda_naive_bitwise_no_macro_kernel.cu  models.hpp  (+1 more)
src/debug_utils/: diff_grid.hpp  pretty_print.cpp  pretty_print.hpp
src/infrastructure/: algorithm.hpp  algorithm_repository.hpp  colors.hpp  data_loader.hpp  experiment_manager.hpp  experiment_params.hpp  grid.hpp  timer.hpp
(+145 files in other folders)
